# itemlang

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  README.md  README.rst  requirements_dev.txt  setup.cfg  setup.py
cpptests/: CMakeLists.txt  Readme.md
cpptests/algos/: example.algo
cpptests/items/: example.item
cpptests/tests/: basic_io_test.cpp
itemlang/: codegen.py  console.py  edit.py  metamodel.py  metamodel_formula.py  object_processors.py
itemlang/algoc/: codegen.py  metamodel.py  object_processors.py
itemlang/algoc/support_cpp_code/: cpp_header.template  custom_algo_cpptool.py
itemlang/commands/: console.py  itemc.py
itemlang/grammar/: CustomAlgoLang.tx  CustomIDL.tx
itemlang/itemc/: codegen.py  custom_idl_codegen.py  custom_idl_metamodel.py  custom_idl_metamodel_formula.py  custom_idl_object_processors.py  metamodel.py  metamodel_formula.py  object_processors.py
itemlang/itemc/support_cpp_code/: cpp_header.template  custom_idl_cpptool.py
itemlang/itemc/support_cpp_code/target_lang/: tools.h
itemlang/itemc/support_octave_code/: custom_idl_octtool.py  octave_check.template  octave_create.template  octave_load.template  octave_read.template  octave_write.template
itemlang/itemc/support_python_code/: custom_idl_pytool.py  python.template
itemlang/itemc/support_python_code/target_lang/: attributes.py  tools.py
itemlang/itemc/support_python_construct_code/: custom_idl_pyctool.py
itemlang/support_cpp_code/: custom_idl_cpptool.py
itemlang/support_octave_code/: custom_idl_octtool.py
itemlang/support_python_code/: custom_idl_pytool.py
itemlang/support_python_code/target_lang/: attributes.py  tools.py
scripts/: itemc.py
system_tests/: README.rst  Readme.md  Readme.rst  run.sh
system_tests/cpp/: CMakeLists.txt
system_tests/cpp/src/algos/: simple_adder1.cpp  simple_adder1.h
system_tests/cpp/tests/: basic_io_test.cpp  simple_adder1_test.cpp
system_tests/cpptests/: CMakeLists.txt
system_tests/model/algos/: example.algo
system_tests/model/items/: example2.item  types.inc
system_tests/octave/: run_tests.sh
system_tests/octave/tests/: demo.m
system_tests/pycpp_example/: run_tests.sh
system_tests/pycpp_example/model/: ImageData.item
system_tests/pycpp_example/src-cpp/items/: ImageData.h
system_tests/pycpp_example/src-python/: AlgoTestDataProvider.html  AlgoTestDataProvider.ipynb
system_tests/pycpp_example/src-python/items/: ImageData.py
tests/: test_basic_algo_model.py  test_basic_python_code.py  test_validation.py  test_validation_CheckRawTypes.py  test_validation_CheckRawTypes_language_specific_infos.py  test_validation_CheckRawTypes_language_unspecific_infos.py  test_validation_algo_model.py  test_validation_check_array_attribute.py  test_validation_check_array_dimensions.py  test_validation_check_scalar_ref.py
tests/algos/: simple_data.inc  simple_model.algo
